<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/btn_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_import"
                style="@style/Base.Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grouping"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btn_import_faces"
                style="@style/Base.Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_faces"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btn_import_burst"
                style="@style/Base.Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burst_mode"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btn_tag"
                style="@style/Base.Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btn_tag_demo"
                style="@style/Base.Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_sample"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btn_group_demo"
                style="@style/Base.Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_sample"
                android:textSize="10sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <RelativeLayout
        android:id="@+id/result_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_con"
        android:background="#1f000000">

        <Button
            android:id="@+id/btn_group_result"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/group_result" />

        <TextView
            android:id="@+id/max_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/btn_group_result"
            android:text="@string/max_processing" />

        <EditText
            android:id="@+id/grouping_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/max_count_tv"
            android:text="300" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/grouping_max"
            android:text="@string/stop"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/group_count_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_con"
        android:background="#1f000000"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/result_count" />

        <EditText
            android:id="@+id/grouping_result_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/result_count_to" />

        <EditText
            android:id="@+id/grouping_result_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/sensitivity" />
        <EditText
            android:id="@+id/sensitivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/processing_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_count_con"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/processing_pb"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/processing_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status:" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/preview_con"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/processing_con"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp" />

        <ImageView
            android:id="@+id/iv_autoenhance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp"
            android:visibility="gone" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_output"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/preview_con">

        <TextView
            android:id="@+id/tf_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
</RelativeLayout>
